Removed java examples